ecmascript/parser/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts:6:22
  |
6 | var xs3: typeof Array<number>;
  |                      ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts:6:22
  |
6 | var xs3: typeof Array<number>;
  |                      ^

error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts:6:29
  |
6 | var xs3: typeof Array<number>;
  |                             ^

error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts:7:22
  |
7 | var xs4: typeof Array<typeof x>;
  |                      ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts:7:22
  |
7 | var xs4: typeof Array<typeof x>;
  |                      ^

error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf/input.ts:7:31
  |
7 | var xs4: typeof Array<typeof x>;
  |                               ^

